--- a/Project-4/style.css
+++ b/Project-4/style.css
@@ -542,20 +542,48 @@ video {
   top: 0px;
 }
 
-.mt-10 {
-  margin-top: 2.5rem;
+.bottom-0 {
+  bottom: 0px;
 }
 
-.mt-20 {
-  margin-top: 5rem;
+.left-0 {
+  left: 0px;
 }
 
-.mt-16 {
-  margin-top: 4rem;
+.-left-96 {
+  left: -24rem;
+}
+
+.-left-60 {
+  left: -15rem;
+}
+
+.-left-80 {
+  left: -20rem;
+}
+
+.z-10 {
+  z-index: 10;
+}
+
+.-mt-5 {
+  margin-top: -1.25rem;
+}
+
+.-ml-10 {
+  margin-left: -2.5rem;
+}
+
+.block {
+  display: block;
 }
 
 .flex {
   display: flex;
+}
+
+.hidden {
+  display: none;
 }
 
 .h-screen {
@@ -566,6 +594,39 @@ video {
   width: 100%;
 }
 
+.w-fit {
+  width: -moz-fit-content;
+  width: fit-content;
+}
+
+.w-\[45vw\] {
+  width: 45vw;
+}
+
+.min-w-\[100px\] {
+  min-width: 100px;
+}
+
+.min-w-\[50px\] {
+  min-width: 50px;
+}
+
+.origin-left {
+  transform-origin: left;
+}
+
+.origin-\[-100px\] {
+  transform-origin: -100px;
+}
+
+.origin-\[-1000px\] {
+  transform-origin: -1000px;
+}
+
+.origin-\[-100vw\] {
+  transform-origin: -100vw;
+}
+
 .items-center {
   align-items: center;
 }
@@ -574,34 +635,20 @@ video {
   justify-content: space-between;
 }
 
-.rounded-lg {
-  border-radius: 0.5rem;
+.self-start {
+  align-self: flex-start;
 }
 
-.rounded-2xl {
-  border-radius: 1rem;
+.justify-self-start {
+  justify-self: start;
 }
 
 .border-2 {
   border-width: 2px;
 }
 
-.border-8 {
-  border-width: 8px;
-}
-
 .border-b-2 {
   border-bottom-width: 2px;
-}
-
-.border-black {
-  --tw-border-opacity: 1;
-  border-color: rgb(0 0 0 / var(--tw-border-opacity));
-}
-
-.border-\[\#1C1727\] {
-  --tw-border-opacity: 1;
-  border-color: rgb(28 23 39 / var(--tw-border-opacity));
 }
 
 .border-b-\[\#fff\] {
@@ -609,30 +656,24 @@ video {
   border-bottom-color: rgb(255 255 255 / var(--tw-border-opacity));
 }
 
-.bg-gray-700 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(55 65 81 / var(--tw-bg-opacity));
-}
-
 .bg-\[\#1C1727\] {
   --tw-bg-opacity: 1;
   background-color: rgb(28 23 39 / var(--tw-bg-opacity));
 }
 
-.bg-transparent {
-  background-color: transparent;
+.bg-red-800 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(153 27 27 / var(--tw-bg-opacity));
 }
 
-.p-3 {
-  padding: 0.75rem;
+.bg-red-900 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(127 29 29 / var(--tw-bg-opacity));
 }
 
-.p-2 {
-  padding: 0.5rem;
-}
-
-.p-1 {
-  padding: 0.25rem;
+.bg-gray-900 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(17 24 39 / var(--tw-bg-opacity));
 }
 
 .px-4 {
@@ -640,19 +681,24 @@ video {
   padding-right: 1rem;
 }
 
+.py-1 {
+  padding-top: 0.25rem;
+  padding-bottom: 0.25rem;
+}
+
 .py-3 {
   padding-top: 0.75rem;
   padding-bottom: 0.75rem;
 }
 
-.py-2 {
-  padding-top: 0.5rem;
-  padding-bottom: 0.5rem;
+.px-10 {
+  padding-left: 2.5rem;
+  padding-right: 2.5rem;
 }
 
-.py-1 {
-  padding-top: 0.25rem;
-  padding-bottom: 0.25rem;
+.py-10 {
+  padding-top: 2.5rem;
+  padding-bottom: 2.5rem;
 }
 
 .text-gray-200 {
@@ -660,22 +706,131 @@ video {
   color: rgb(229 231 235 / var(--tw-text-opacity));
 }
 
-.blur-md {
-  --tw-blur: blur(12px);
-  filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
+.text-red-700 {
+  --tw-text-opacity: 1;
+  color: rgb(185 28 28 / var(--tw-text-opacity));
 }
 
-.blur {
-  --tw-blur: blur(8px);
-  filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
+.duration-500 {
+  transition-duration: 500ms;
 }
 
-.backdrop-filter {
-  -webkit-backdrop-filter: var(--tw-backdrop-blur) var(--tw-backdrop-brightness) var(--tw-backdrop-contrast) var(--tw-backdrop-grayscale) var(--tw-backdrop-hue-rotate) var(--tw-backdrop-invert) var(--tw-backdrop-opacity) var(--tw-backdrop-saturate) var(--tw-backdrop-sepia);
-          backdrop-filter: var(--tw-backdrop-blur) var(--tw-backdrop-brightness) var(--tw-backdrop-contrast) var(--tw-backdrop-grayscale) var(--tw-backdrop-hue-rotate) var(--tw-backdrop-invert) var(--tw-backdrop-opacity) var(--tw-backdrop-saturate) var(--tw-backdrop-sepia);
+.ease-in-out {
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+@media not all and (min-width: 768px) {
+  .max-md\:absolute {
+    position: absolute;
+  }
+
+  .max-md\:mt-24 {
+    margin-top: 6rem;
+  }
+
+  .max-md\:mt-96 {
+    margin-top: 24rem;
+  }
+
+  .max-md\:hidden {
+    display: none;
+  }
+
+  .max-md\:h-screen {
+    height: 100vh;
+  }
+
+  .max-md\:w-\[45\%\] {
+    width: 45%;
+  }
+
+  .max-md\:w-\[45vw\] {
+    width: 45vw;
+  }
+
+  .max-md\:flex-col {
+    flex-direction: column;
+  }
+
+  .max-md\:justify-between {
+    justify-content: space-between;
+  }
+
+  .max-md\:justify-evenly {
+    justify-content: space-evenly;
+  }
+
+  .max-md\:bg-white {
+    --tw-bg-opacity: 1;
+    background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+  }
+
+  .max-md\:bg-gray-950 {
+    --tw-bg-opacity: 1;
+    background-color: rgb(3 7 18 / var(--tw-bg-opacity));
+  }
+
+  .max-md\:text-black {
+    --tw-text-opacity: 1;
+    color: rgb(0 0 0 / var(--tw-text-opacity));
+  }
+
+  .max-md\:text-gray-900 {
+    --tw-text-opacity: 1;
+    color: rgb(17 24 39 / var(--tw-text-opacity));
+  }
+
+  .max-md\:text-white {
+    --tw-text-opacity: 1;
+    color: rgb(255 255 255 / var(--tw-text-opacity));
+  }
+}
+
+@media not all and (min-width: 640px) {
+  .max-sm\:-left-24 {
+    left: -6rem;
+  }
+
+  .max-sm\:-left-40 {
+    left: -10rem;
+  }
+
+  .max-sm\:-left-60 {
+    left: -15rem;
+  }
+
+  .max-sm\:-left-80 {
+    left: -20rem;
+  }
+
+  .max-sm\:-left-52 {
+    left: -13rem;
+  }
+}
+
+@media (min-width: 640px) {
+  .sm\:-left-40 {
+    left: -10rem;
+  }
+
+  .sm\:-left-24 {
+    left: -6rem;
+  }
 }
 
 @media (min-width: 768px) {
+  .md\:-left-80 {
+    left: -20rem;
+  }
+
+  .md\:block {
+    display: block;
+  }
+
+  .md\:hidden {
+    display: none;
+  }
+
   .md\:flex-row {
     flex-direction: row;
   }
