--- a/Project-4/style.css
+++ b/Project-4/style.css
@@ -538,40 +538,28 @@ video {
   position: fixed;
 }
 
-.top-0 {
-  top: 0px;
-}
-
-.bottom-0 {
-  bottom: 0px;
-}
-
 .left-0 {
   left: 0px;
 }
 
-.-left-96 {
-  left: -24rem;
-}
-
-.-left-60 {
-  left: -15rem;
-}
-
-.-left-80 {
-  left: -20rem;
+.top-0 {
+  top: 0px;
 }
 
 .z-10 {
   z-index: 10;
 }
 
-.-mt-5 {
-  margin-top: -1.25rem;
-}
-
 .-ml-10 {
   margin-left: -2.5rem;
+}
+
+.-ml-0 {
+  margin-left: -0px;
+}
+
+.-ml-5 {
+  margin-left: -1.25rem;
 }
 
 .block {
@@ -582,49 +570,33 @@ video {
   display: flex;
 }
 
-.hidden {
-  display: none;
-}
-
 .h-screen {
   height: 100vh;
+}
+
+.h-3 {
+  height: 0.75rem;
 }
 
 .w-full {
   width: 100%;
 }
 
-.w-fit {
-  width: -moz-fit-content;
-  width: fit-content;
+.w-28 {
+  width: 7rem;
 }
 
-.w-\[45vw\] {
-  width: 45vw;
+.w-5 {
+  width: 1.25rem;
 }
 
-.min-w-\[100px\] {
-  min-width: 100px;
+.w-10 {
+  width: 2.5rem;
 }
 
-.min-w-\[50px\] {
-  min-width: 50px;
-}
-
-.origin-left {
-  transform-origin: left;
-}
-
-.origin-\[-100px\] {
-  transform-origin: -100px;
-}
-
-.origin-\[-1000px\] {
-  transform-origin: -1000px;
-}
-
-.origin-\[-100vw\] {
-  transform-origin: -100vw;
+.-translate-x-full {
+  --tw-translate-x: -100%;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
 .items-center {
@@ -635,12 +607,8 @@ video {
   justify-content: space-between;
 }
 
-.self-start {
-  align-self: flex-start;
-}
-
-.justify-self-start {
-  justify-self: start;
+.self-center {
+  align-self: center;
 }
 
 .border-2 {
@@ -661,19 +629,9 @@ video {
   background-color: rgb(28 23 39 / var(--tw-bg-opacity));
 }
 
-.bg-red-800 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(153 27 27 / var(--tw-bg-opacity));
-}
-
-.bg-red-900 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(127 29 29 / var(--tw-bg-opacity));
-}
-
-.bg-gray-900 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(17 24 39 / var(--tw-bg-opacity));
+.px-10 {
+  padding-left: 2.5rem;
+  padding-right: 2.5rem;
 }
 
 .px-4 {
@@ -691,14 +649,9 @@ video {
   padding-bottom: 0.75rem;
 }
 
-.px-10 {
-  padding-left: 2.5rem;
-  padding-right: 2.5rem;
-}
-
-.py-10 {
-  padding-top: 2.5rem;
-  padding-bottom: 2.5rem;
+.px-5 {
+  padding-left: 1.25rem;
+  padding-right: 1.25rem;
 }
 
 .text-gray-200 {
@@ -706,9 +659,14 @@ video {
   color: rgb(229 231 235 / var(--tw-text-opacity));
 }
 
-.text-red-700 {
-  --tw-text-opacity: 1;
-  color: rgb(185 28 28 / var(--tw-text-opacity));
+.transition-all {
+  transition-property: all;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 150ms;
+}
+
+.duration-200 {
+  transition-duration: 200ms;
 }
 
 .duration-500 {
@@ -724,14 +682,6 @@ video {
     position: absolute;
   }
 
-  .max-md\:mt-24 {
-    margin-top: 6rem;
-  }
-
-  .max-md\:mt-96 {
-    margin-top: 24rem;
-  }
-
   .max-md\:hidden {
     display: none;
   }
@@ -740,93 +690,30 @@ video {
     height: 100vh;
   }
 
-  .max-md\:w-\[45\%\] {
-    width: 45%;
-  }
-
   .max-md\:w-\[45vw\] {
     width: 45vw;
+  }
+
+  .max-md\:-translate-x-full {
+    --tw-translate-x: -100%;
+    transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
   }
 
   .max-md\:flex-col {
     flex-direction: column;
   }
 
-  .max-md\:justify-between {
-    justify-content: space-between;
-  }
-
   .max-md\:justify-evenly {
     justify-content: space-evenly;
-  }
-
-  .max-md\:bg-white {
-    --tw-bg-opacity: 1;
-    background-color: rgb(255 255 255 / var(--tw-bg-opacity));
   }
 
   .max-md\:bg-gray-950 {
     --tw-bg-opacity: 1;
     background-color: rgb(3 7 18 / var(--tw-bg-opacity));
   }
-
-  .max-md\:text-black {
-    --tw-text-opacity: 1;
-    color: rgb(0 0 0 / var(--tw-text-opacity));
-  }
-
-  .max-md\:text-gray-900 {
-    --tw-text-opacity: 1;
-    color: rgb(17 24 39 / var(--tw-text-opacity));
-  }
-
-  .max-md\:text-white {
-    --tw-text-opacity: 1;
-    color: rgb(255 255 255 / var(--tw-text-opacity));
-  }
-}
-
-@media not all and (min-width: 640px) {
-  .max-sm\:-left-24 {
-    left: -6rem;
-  }
-
-  .max-sm\:-left-40 {
-    left: -10rem;
-  }
-
-  .max-sm\:-left-60 {
-    left: -15rem;
-  }
-
-  .max-sm\:-left-80 {
-    left: -20rem;
-  }
-
-  .max-sm\:-left-52 {
-    left: -13rem;
-  }
-}
-
-@media (min-width: 640px) {
-  .sm\:-left-40 {
-    left: -10rem;
-  }
-
-  .sm\:-left-24 {
-    left: -6rem;
-  }
 }
 
 @media (min-width: 768px) {
-  .md\:-left-80 {
-    left: -20rem;
-  }
-
-  .md\:block {
-    display: block;
-  }
-
   .md\:hidden {
     display: none;
   }
