--- a/Project-4/style.css
+++ b/Project-4/style.css
@@ -526,8 +526,20 @@ video {
   position: fixed;
 }
 
+.relative {
+  position: relative;
+}
+
+.bottom-16 {
+  bottom: 4rem;
+}
+
 .left-0 {
   left: 0px;
+}
+
+.left-9 {
+  left: 2.25rem;
 }
 
 .top-0 {
@@ -538,16 +550,17 @@ video {
   z-index: 10;
 }
 
-.-z-10 {
-  z-index: -10;
-}
-
 .order-1 {
   order: 1;
 }
 
 .order-2 {
   order: 2;
+}
+
+.mx-auto {
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .my-3 {
@@ -557,10 +570,6 @@ video {
 
 .-ml-5 {
   margin-left: -1.25rem;
-}
-
-.mt-28 {
-  margin-top: 7rem;
 }
 
 .mt-5 {
@@ -579,6 +588,10 @@ video {
   height: 2.5rem;
 }
 
+.h-20 {
+  height: 5rem;
+}
+
 .h-screen {
   height: 100vh;
 }
@@ -587,16 +600,13 @@ video {
   width: 3rem;
 }
 
-.w-4\/5 {
-  width: 80%;
+.w-20 {
+  width: 5rem;
 }
 
-.w-\[45\%\] {
-  width: 45%;
-}
-
-.w-\[55\%\] {
-  width: 55%;
+.w-fit {
+  width: -moz-fit-content;
+  width: fit-content;
 }
 
 .w-full {
@@ -636,6 +646,10 @@ video {
   align-self: center;
 }
 
+.rounded-full {
+  border-radius: 9999px;
+}
+
 .rounded-lg {
   border-radius: 0.5rem;
 }
@@ -657,6 +671,11 @@ video {
   border-bottom-color: rgb(255 255 255 / var(--tw-border-opacity));
 }
 
+.bg-\[\#160E2A\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(22 14 42 / var(--tw-bg-opacity));
+}
+
 .bg-\[\#1C1727\] {
   --tw-bg-opacity: 1;
   background-color: rgb(28 23 39 / var(--tw-bg-opacity));
@@ -666,9 +685,12 @@ video {
   background-color: transparent;
 }
 
-.px-16 {
-  padding-left: 4rem;
-  padding-right: 4rem;
+.bg-\[url\(\'\.\/assets\/map\.png\'\)\] {
+  background-image: url('./assets/map.png');
+}
+
+.bg-no-repeat {
+  background-repeat: no-repeat;
 }
 
 .px-4 {
@@ -681,19 +703,23 @@ video {
   padding-right: 1.25rem;
 }
 
+.px-8 {
+  padding-left: 2rem;
+  padding-right: 2rem;
+}
+
 .py-1 {
   padding-top: 0.25rem;
   padding-bottom: 0.25rem;
 }
 
-.py-3 {
-  padding-top: 0.75rem;
-  padding-bottom: 0.75rem;
+.py-10 {
+  padding-top: 2.5rem;
+  padding-bottom: 2.5rem;
 }
 
-.px-8 {
-  padding-left: 2rem;
-  padding-right: 2rem;
+.text-center {
+  text-align: center;
 }
 
 .font-mono {
@@ -703,6 +729,11 @@ video {
 .text-2xl {
   font-size: 1.5rem;
   line-height: 2rem;
+}
+
+.text-4xl {
+  font-size: 2.25rem;
+  line-height: 2.5rem;
 }
 
 .text-6xl {
@@ -789,6 +820,10 @@ video {
     background-color: rgb(3 7 18 / var(--tw-bg-opacity));
   }
 
+  .max-md\:bg-contain {
+    background-size: contain;
+  }
+
   .max-md\:px-8 {
     padding-left: 2rem;
     padding-right: 2rem;
@@ -812,10 +847,6 @@ video {
     display: none;
   }
 
-  .md\:w-\[55\%\] {
-    width: 55%;
-  }
-
   .md\:w-4\/5 {
     width: 80%;
   }
@@ -824,8 +855,16 @@ video {
     width: 45%;
   }
 
+  .md\:w-\[55\%\] {
+    width: 55%;
+  }
+
   .md\:flex-row {
     flex-direction: row;
+  }
+
+  .md\:bg-contain {
+    background-size: contain;
   }
 
   .md\:px-10 {
@@ -841,5 +880,11 @@ video {
   .md\:py-3 {
     padding-top: 0.75rem;
     padding-bottom: 0.75rem;
+  }
+}
+
+@media (min-width: 1243px) {
+  .min-\[1243px\]\:bg-cover {
+    background-size: cover;
   }
 }
